--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "serve": "^14.2.2",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
