--- a/gluestack-ui.config.json
+++ b/gluestack-ui.config.json
@@ -4,7 +4,7 @@
     "css": "global.css"
   },
   "app": {
-    "entry": "App.tsx",
-    "components": "components/ui"
+     "entry": "@/app/App.tsx",
+    "components": "@/components/ui"
   }
 }
