--- a/package.json
+++ b/package.json
@@ -42,16 +42,22 @@
     "@gluestack-ui/textarea": "^0.1.24",
     "@gluestack-ui/toast": "^1.0.8",
     "@gluestack-ui/tooltip": "^0.1.36-alpha.0",
+    "@hookform/resolvers": "^5.0.1",
     "@legendapp/motion": "^2.4.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@supabase/supabase-js": "^2.49.4",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.42",
     "expo-linking": "~7.0.5",
+    "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "^4.0.9",
     "expo-updates": "~0.27.4",
     "lucide-react-native": "^0.445.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.76.9",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -59,6 +65,7 @@
     "react-native-web": "~0.19.13",
     "serve": "^14.2.2",
     "tailwindcss": "^3.4.15",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
